--- a/PA1.vcxproj
+++ b/PA1.vcxproj
@@ -100,10 +100,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="BoundingSphere.cpp" />
     <ClCompile Include="Cube.cpp" />
     <ClCompile Include="Geometry.cpp" />
     <ClCompile Include="LightSource.cpp" />
     <ClCompile Include="AmongUsObject.cpp" />
+    <ClCompile Include="Lobby.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="PointCloud.cpp" />
     <ClCompile Include="shader.cpp" />
@@ -117,6 +119,7 @@
     <ClInclude Include="Geometry.h" />
     <ClInclude Include="LightSource.h" />
     <ClInclude Include="AmongUsObject.h" />
+    <ClInclude Include="Lobby.h" />
     <ClInclude Include="main.h" />
     <ClInclude Include="Node.h" />
     <ClInclude Include="Object.h" />
